hide main overflow to fix mobile issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -159,4 +159,5 @@ body {
 }
 main {
   flex: 1 1 auto;
+  overflow: hidden;
 }
